various changes including overnightParkingSpots